Add admin page routing fix for static export deployment
- Created fix-admin-routing.sh script to handle /admin routing
- Script creates admin.html that redirects to admin/ directory
- Integrated script into GitHub Actions workflow
- Should resolve CloudFront admin page access issues

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,9 @@ jobs:
         run: |
           npm run build
 
+      - name: Fix admin page routing
+        run: ./scripts/fix-admin-routing.sh
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
