--- a/aws/cloudformation-template.yaml
+++ b/aws/cloudformation-template.yaml
@@ -113,9 +113,11 @@ Resources:
           - ErrorCode: 404
             ResponseCode: 200
             ResponsePagePath: /index.html
+            ErrorCachingMinTTL: 0
           - ErrorCode: 403
             ResponseCode: 200
             ResponsePagePath: /index.html
+            ErrorCachingMinTTL: 0
         Enabled: true
         HttpVersion: http2
         PriceClass: PriceClass_100
