Improve stack cleanup with better error handling and persistent OAI
- Add continue-update-rollback for DELETE_FAILED states
- Skip problematic CloudFrontOriginAccessIdentity resource when needed
- Add DeletionPolicy: Retain to CloudFront OAI to prevent deletion issues
- Implement better fallback and retry logic for deployments
- Add detailed status checking and user-friendly error messages
- Ensure CloudFront resources persist across all stack operations

--- a/aws/cloudformation-template.yaml
+++ b/aws/cloudformation-template.yaml
@@ -86,6 +86,8 @@ Resources:
   # CloudFront Origin Access Identity
   CloudFrontOriginAccessIdentity:
     Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
+    DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       CloudFrontOriginAccessIdentityConfig:
         Comment: !Sub 'OAI for ${ProjectName}'
