--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,18 +68,51 @@ jobs:
           # Handle failed states
           if [[ "$STACK_STATUS" == "DELETE_FAILED" || "$STACK_STATUS" == "CREATE_FAILED" || "$STACK_STATUS" == "UPDATE_ROLLBACK_FAILED" ]]; then
             echo "⚠️ Stack is in failed state: $STACK_STATUS"
-            echo "🔧 Forcing stack deletion to enable clean redeployment..."
             
-            # Force delete the failed stack
-            aws cloudformation delete-stack --stack-name $STACK_NAME --region $AWS_REGION
+            # For DELETE_FAILED, try to continue update rollback with resource skipping
+            if [[ "$STACK_STATUS" == "DELETE_FAILED" ]]; then
+              echo "🔧 Attempting to skip problematic resources and continue deletion..."
+              
+              # Try to continue update rollback by skipping the problematic CloudFront OAI
+              aws cloudformation continue-update-rollback \
+                --stack-name $STACK_NAME \
+                --resources-to-skip CloudFrontOriginAccessIdentity \
+                --region $AWS_REGION 2>/dev/null || {
+                echo "⚠️ Continue update rollback failed, trying direct deletion..."
+                
+                # If that fails, force delete the stack
+                aws cloudformation delete-stack --stack-name $STACK_NAME --region $AWS_REGION
+              }
+              
+              echo "⏳ Waiting for stack cleanup to complete..."
+              # Wait for deletion with timeout
+              timeout 600 aws cloudformation wait stack-delete-complete --stack-name $STACK_NAME --region $AWS_REGION || {
+                echo "⚠️ Stack deletion timed out or failed"
+                
+                # Check if we can deploy a new stack anyway
+                NEW_STACK_STATUS=$(aws cloudformation describe-stacks \
+                  --stack-name $STACK_NAME \
+                  --query 'Stacks[0].StackStatus' \
+                  --output text \
+                  --region $AWS_REGION 2>/dev/null || echo "STACK_NOT_FOUND")
+                
+                if [[ "$NEW_STACK_STATUS" == "STACK_NOT_FOUND" ]]; then
+                  echo "✅ Stack successfully deleted"
+                else
+                  echo "⚠️ Stack still exists in state: $NEW_STACK_STATUS"
+                  echo "🔄 Will attempt deployment anyway"
+                fi
+              }
+            else
+              echo "🔧 Forcing stack deletion for state: $STACK_STATUS"
+              aws cloudformation delete-stack --stack-name $STACK_NAME --region $AWS_REGION
+              
+              timeout 300 aws cloudformation wait stack-delete-complete --stack-name $STACK_NAME --region $AWS_REGION || {
+                echo "⚠️ Stack deletion timed out, continuing..."
+              }
+            fi
             
-            echo "⏳ Waiting for stack deletion to complete..."
-            # Wait for deletion with timeout
-            timeout 600 aws cloudformation wait stack-delete-complete --stack-name $STACK_NAME --region $AWS_REGION || {
-              echo "⚠️ Stack deletion timed out, but continuing with deployment..."
-            }
-            
-            echo "✅ Stack cleaned up, ready for fresh deployment"
+            echo "✅ Stack cleanup attempted, ready for deployment"
             echo "stack-cleaned=true" >> $GITHUB_OUTPUT
           else
             echo "✅ Stack state is acceptable: $STACK_STATUS"
@@ -225,7 +258,9 @@ jobs:
           
           # Deploy CloudFormation stack
           echo "Deploying CloudFormation stack..."
-          aws cloudformation deploy \
+          
+          # Try deploying to the main stack name first
+          if ! aws cloudformation deploy \
             --template-file aws/cloudformation-template.yaml \
             --stack-name $STACK_NAME \
             --parameter-overrides \
@@ -233,7 +268,35 @@ jobs:
                 Environment=prod \
             --capabilities CAPABILITY_NAMED_IAM \
             --region $AWS_REGION \
-            --no-fail-on-empty-changeset
+            --no-fail-on-empty-changeset; then
+            
+            echo "⚠️ Main stack deployment failed, checking if we need a fallback approach..."
+            
+            # Check if the stack is still in a failed state
+            CURRENT_STATUS=$(aws cloudformation describe-stacks \
+              --stack-name $STACK_NAME \
+              --query 'Stacks[0].StackStatus' \
+              --output text \
+              --region $AWS_REGION 2>/dev/null || echo "STACK_NOT_FOUND")
+            
+            if [[ "$CURRENT_STATUS" != "STACK_NOT_FOUND" ]]; then
+              echo "⚠️ Stack still exists in state: $CURRENT_STATUS"
+              echo "🔄 This is expected - the deployment will retry on the next push"
+              echo "💡 The CloudFront distribution is preserved, so your URL remains the same"
+              exit 1
+            else
+              echo "🔄 Retrying deployment to fresh stack..."
+              aws cloudformation deploy \
+                --template-file aws/cloudformation-template.yaml \
+                --stack-name $STACK_NAME \
+                --parameter-overrides \
+                    ProjectName=artforge-portfolio \
+                    Environment=prod \
+                --capabilities CAPABILITY_NAMED_IAM \
+                --region $AWS_REGION \
+                --no-fail-on-empty-changeset
+            fi
+          fi
 
           # Get stack outputs
           echo "Getting stack outputs..."
