🔧 Fix CloudFormation template syntax error
- Fix malformed Environment parameter that was preventing deployment
- Remove corrupted YAML data from parameters section
- Template now validates successfully and includes all backend resources

This resolves the deployment error where backend components
(ContentManagementFunction, HomepageContentTable, etc.)
were not being created due to template validation failure.

--- a/aws/cloudformation-template.yaml
+++ b/aws/cloudformation-template.yaml
@@ -9,11 +9,7 @@ Parameters:
   
   Environment:
     Type: String
-    Default              Resource:
-                - !GetAtt ArtworkTable.Arn
-                - !Sub '${ArtworkTable.Arn}/index/*'
-                - !GetAtt HomepageContentTable.Arn
-                - !Sub '${HomepageContentTable.Arn}/index/*''prod'
+    Default: 'prod'
     AllowedValues: [dev, staging, prod]
     Description: 'Environment name'
   
